--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sample Lib</string>
+    <string name="google">&lt;a href="http://www.google.com">Google&lt;/a></string>
 </resources>
